@@ -47,7 +47,7 @@ class MainWindow : public QMainWindow
     Q_OBJECT
 
 public:
-    explicit MainWindow(const QString cfgfile="default.conf", QWidget *parent = 0);
+    explicit MainWindow(const QString cfgfile, bool edit_conf, QWidget *parent = 0);
     ~MainWindow();
 
     bool loadConfig(const QString cfgfile, bool check_crash);
